--- a/src/njk/_includes/nav.njk
+++ b/src/njk/_includes/nav.njk
@@ -1,20 +1,28 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="{{ relative_path }}index.html">Navbar</a>
+  <a class="navbar-brand" href="{{ relative_path }}index.html">Home</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
-      <li class="nav-item dropdown">
+
+    <li class="nav-item">
+        <a class="nav-link" href="discography.html">Discography</a>
+
+    <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Library books
+          The Band
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          {% for book in library.books %}
-          <a class="dropdown-item" href="{{ relative_path }}books/{{ book.slug}}.html">{{ book.title }}</a>
-          {% endfor %}
+        <a class="dropdown-item" href="{{ relative_path }}members/freddie-mercury.html">Freddie Mercury</a>
+        <a class="dropdown-item" href="{{ relative_path }}members/brian-may.html">Brian May</a>
+        <a class="dropdown-item" href="{{ relative_path }}members/john-deacon.html">John Deacon</a>
+        <a class="dropdown-item" href="{{ relative_path }}members/roger-taylor.html">Roger Taylor</a>
+
+         
         </div>
       </li>
     </ul>
   </div>
+  </button>
 </nav>
