--- a/src/njk/_templates/bake-members.njk
+++ b/src/njk/_templates/bake-members.njk
@@ -13,8 +13,8 @@
           <img src="../img/{{ slug }}.jpg" alt="" class="img-fluid mb-4">
       </div>
       <div class="col-sm-8">
-          <h1>{{ title }}</h1>
-          <p>{{ blurb | safe }}</p>
+          <h1>{{ name }}</h1>
+          <p>{{ description | safe }}</p>
       </div>
     </div>
   </article>
