--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -24,3 +24,19 @@
 h3 {
   font-size: 1.5rem;
 }
+
+.jumbotron {
+  background: url(../img/queen-live-on-stage.jpg) no-repeat center;
+  background-size: cover;
+}
+
+.jumbotron h1{
+  color:white;
+  font-family: 'Staatliches', cursive;
+  font-size: 950%;
+}
+
+.jumbotron p{
+  color: #fff;
+}
+
