--- a/src/njk/_includes/nav.njk
+++ b/src/njk/_includes/nav.njk
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="{{ relative_path }}index.html">Home</a>
+  <a class="navbar-brand" href="{{ relative_path }}index.html">Queen</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -7,7 +7,7 @@
     <ul class="navbar-nav">
 
     <li class="nav-item">
-        <a class="nav-link" href="discography.html">Discography</a>
+        <a class="nav-link" href="{{ relative_path }}discography.html">Discography</a>
 
     <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -19,7 +19,6 @@
         <a class="dropdown-item" href="{{ relative_path }}members/john-deacon.html">John Deacon</a>
         <a class="dropdown-item" href="{{ relative_path }}members/roger-taylor.html">Roger Taylor</a>
 
-         
         </div>
       </li>
     </ul>
