--- a/src/njk/index.njk
+++ b/src/njk/index.njk
@@ -8,26 +8,26 @@
 <div class="jumbotron jumbotron-fluid text-center">
  <div class="jumbotron">
   <h1 class="display-4">Q u e e n</h1>
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
-  <p class="lead">something about the band here</p>
   <hr class="my-4">
-  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+  </div>
 </div>
-</div>
+
 <div class="container text-center">
-  <h1>"Carry on, carry on, as if nothing really matters..."</h1>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin in facilisis velit, aliquam congue dui. Mauris id mi quam. Nam enim leo, bibendum vel efficitur id, elementum malesuada est. Pellentesque interdum tempus eros nec iaculis. Quisque ac est dictum, vehicula nulla quis, condimentum dui.</p>
+  <h1>Welcome to the Official Site of The Best Band in the World</h1>
+  <p> </p>
+  
+  <h2>"Carry on, carry on, as if nothing really matters..."</h2>
+  <p>In 1970, the iconic band that we all know as 'Queen' was created. This site contains all you need to know about the legends that will go down in history.</p>
   </div>
 </div>
 <div class="container text-center">
 <h2>Queen: The Members</h2>
-<p>this will have more info</p>
+<p>Learn more about each individual!</p>
  <div class="row">
-   {% for members in queen.members %}
+   {% for member in queen.members %}
       <div class="col">
-        <img src="img/{{ members.slug }}.jpg" alt="" class="img-fluid">
-        <h3><a href="members/{{ members.slug }}.html">{{ members.name }}</a></h3>
+        <img src="img/members/{{ member.image }}" alt="" class="img-fluid">
+        <h3><a href="members/{{ member.slug }}.html">{{ member.name }}</a></h3>
       </div>
     {% endfor %}
   </div>
