--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -26,6 +26,11 @@ h3 {
 }
 
 .jumbotron {
+  background: url(../img/queen-band-wallpaper.jpg) no-repeat center;
+  background-size: cover;
+}
+
+.jumbotron-special {
   background: url(../img/queen-live-on-stage.jpg) no-repeat center;
   background-size: cover;
 }
@@ -37,6 +42,37 @@ h3 {
 }
 
 .jumbotron p{
-  color: #fff;
+  color: white;
 }
 
+
+.card-columns {
+  @include media-breakpoint-only(sm) {
+    column-count: 2;
+  }
+
+  @include media-breakpoint-only(md) {
+    column-count: 3;
+  }
+
+  @include media-breakpoint-only(lg) {
+    column-count: 4;
+  }
+  @include media-breakpoint-only(xl) {
+    column-count: 5;
+  }
+}
+
+h1 {
+  font-family: 'Rock Salt', cursive;
+}
+
+a:link {
+  color: peru;
+}
+
+a:visited {
+  color: peru;
+}
+
+//cdn.datatables.net/1.10.24/css/jquery.dataTables.min.css
